# brane-ide

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  get_jupyterlab_token.sh  make.py  test.cpp
extensions/brane_logger/: package.json
extensions/brane_logger/src/: index.tsx
extensions/renderer/: package.json
extensions/renderer/src/: component.tsx  index.tsx
kernels/bscript/bscript_kernel/: __init__.py  driver_pb2.py  kernel.py  kernel_wip.py
proto/: driver.proto
share/jupyter/kernels/bscript/: kernel.json.in
src/: custom_interpreter.cpp  custom_interpreter.hpp  logging.hpp  main.cpp  test.cpp  test_kernel.cpp
src/brane/: brane_cli.h  brane_tsk.h
test/: driver_pb2.py  driver_pb2_grpc.py  test.py
